--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,7 @@
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
+	<classpathentry exported="true" kind="src" path="/appcompat_v7"/>
+	<classpathentry kind="lib" path="G:/adt-bundle/adt-bundle-windows-x86_64-20140702/sdk/platforms/android-20/android.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
